fix layout issues and add transition

--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,6 +1,6 @@
 .home {
   .home-title {
-    margin: 0 0 2rem;
+    margin: 0 0 1.5rem;
     text-align: start;
     font-weight: 900;
   }
