--- a/src/views/Wishlist/Wishlist.scss
+++ b/src/views/Wishlist/Wishlist.scss
@@ -1,6 +1,6 @@
 .wishlist {
   .wishlist-breadcrumb {
-    margin: 0 0 2rem;
+    margin: 0 0 1.5rem;
     text-align: start;
     display: flex;
     align-items: center;
@@ -17,6 +17,7 @@
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 32px 16px;
     justify-items: center;
+    transition: all 200ms;
 
     @media (max-width: 768px) {
       gap: 16px;
@@ -24,10 +25,32 @@
     }
   }
 
+  .wishlist-enter-active,
+  .wishlist-leave-active {
+    position: absolute;
+    transition: all 200ms ease;
+  }
+  .wishlist-enter,
+  .wishlist-leave-to {
+    opacity: 0;
+  }
+  .wishlist-move {
+    transition: all 1s ease;
+  }
+
   .wishlist-empty {
     text-align: start;
     font-size: 1.25rem;
     font-weight: 500;
     color: #9e9e9e;
+  }
+
+  .fade-enter-active,
+  .fade-leave-active {
+    transition: opacity 200ms ease;
+  }
+  .fade-enter,
+  .fade-leave-to {
+    opacity: 0;
   }
 }
